📝 add readme, editorconfig for github tab spacing

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 	},
 	"keywords": [
 		"eslint",
-		"eslintconfig"
+		"eslintconfig",
+		"vue",
+		"vuejs"
 	],
 	"peerDependencies": {
 		"eslint": ">= 6",
