--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
 	},
 	"homepage": "https://github.com/EmmanuelVlad/eslint-config-nefely#readme",
 	"devDependencies": {
+		"eslint": "^6.8.0",
+		"eslint-config-nefely-base": "^1.0.0",
+		"eslint-plugin-vue": "^6.1.2",
 		"vue-eslint-parser": "^7.0.0"
 	}
 }
