--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eslint-config-nefely",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"description": "",
 	"main": "index.js",
 	"scripts": {},
@@ -26,8 +26,10 @@
 	"homepage": "https://github.com/EmmanuelVlad/eslint-config-nefely#readme",
 	"devDependencies": {
 		"eslint": "^6.8.0",
-		"eslint-config-nefely-base": "^1.0.0",
 		"eslint-plugin-vue": "^6.1.2",
 		"vue-eslint-parser": "^7.0.0"
+	},
+	"dependencies": {
+		"eslint-config-nefely-base": "^1.0.0"
 	}
 }
