✨ add babel-eslint

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	],
 	"peerDependencies": {
 		"eslint": ">= 6",
-		"eslint-plugin-vue": ">= 6"
+		"eslint-plugin-vue": ">= 6.2",
+		"babel-eslint": ">= 10.1"
 	},
 	"author": "Emmanuel VLAD",
 	"license": "ISC",
@@ -25,8 +26,9 @@
 	},
 	"homepage": "https://github.com/EmmanuelVlad/eslint-config-nefely#readme",
 	"devDependencies": {
+		"babel-eslint": "^10.1.0",
 		"eslint": "^6.8.0",
-		"eslint-plugin-vue": "^6.1.2",
+		"eslint-plugin-vue": "^6.2.1",
 		"vue-eslint-parser": "^7.0.0"
 	},
 	"dependencies": {
