--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "eslint-config-nefely",
-	"version": "1.6.0",
+	"version": "2.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {},
@@ -15,9 +15,9 @@
 		"vuejs"
 	],
 	"peerDependencies": {
-		"eslint": ">= 7",
-		"eslint-plugin-vue": ">= 7.0.0-alpha.2",
-		"@babel/eslint-parser": ">= 7"
+		"@babel/eslint-parser": "^7.16.3",
+		"eslint": "^8.3.0",
+		"eslint-plugin-nuxt":"^3.0.0"
 	},
 	"author": "Emmanuel VLAD",
 	"license": "ISC",
@@ -26,14 +26,13 @@
 	},
 	"homepage": "https://github.com/EmmanuelVlad/eslint-config-nefely#readme",
 	"devDependencies": {
-		"@babel/core": "^7.12.10",
-		"@babel/eslint-parser": "^7.12.1",
-		"eslint": "^7.17.0",
-		"eslint-config-nefely-base": "^1.0.0",
-		"eslint-plugin-vue": "^7.4.1",
-		"vue-eslint-parser": "^7.3.0"
+		"@babel/core": "^7.16.0",
+		"@babel/eslint-parser": "^7.16.3",
+		"eslint": "^8.3.0",
+		"vue-eslint-parser": "^8.0.1"
 	},
 	"dependencies": {
-		"eslint-config-nefely-base": "^1.0.0"
+		"eslint-config-nefely-base": "^1.1.0",
+		"eslint-plugin-vue": "^8.1.1"
 	}
 }
